@@ -50,6 +50,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -57,6 +59,7 @@ import java.util.List;
 import static ee.ria.xroad.common.ErrorCodes.X_INCONSISTENT_HEADERS;
 import static ee.ria.xroad.common.ErrorCodes.X_INVALID_BODY;
 import static ee.ria.xroad.common.ErrorCodes.X_INVALID_CONTENT_TYPE;
+import static ee.ria.xroad.common.ErrorCodes.X_INVALID_SOAP_ACTION;
 import static ee.ria.xroad.common.ErrorCodes.translateException;
 import static ee.ria.xroad.common.util.MimeTypes.TEXT_XML;
 import static ee.ria.xroad.common.util.MimeTypes.XOP_XML;
@@ -182,7 +185,7 @@ public final class SoapUtils {
                             + "body must have exactly one child element");
         }
 
-        return children.get(0).getLocalName();
+        return children.getFirst().getLocalName();
     }
 
     /**
@@ -250,13 +253,13 @@ public final class SoapUtils {
             return null;
         }
 
-        QName requestElementQName = bodyChildren.get(0).getElementQName();
+        QName requestElementQName = bodyChildren.getFirst().getElementQName();
         String serviceCode = getServiceCode(soap, requestElementQName);
 
         QName newName = new QName(requestElementQName.getNamespaceURI(),
                 serviceCode + SOAP_SUFFIX_RESPONSE,
                 requestElementQName.getPrefix());
-        bodyChildren.get(0).setElementQName(newName);
+        bodyChildren.getFirst().setElementQName(newName);
 
         if (callback != null) {
             callback.call(soap);
@@ -419,5 +422,33 @@ public final class SoapUtils {
             throw new CodedException(X_INVALID_CONTENT_TYPE,
                     "Invalid content type: %s", mimeType);
         }
+    }
+
+    /**
+     * Validates SOAPAction header value.
+     * Valid header values are: (empty string),(""),("URI-reference")
+     * In addition, this implementation allows missing (null) header.
+     *
+     * @return the argument as-is if it is valid
+     * @throws CodedException if the argument is invalid
+     * @see <a href="https://www.w3.org/TR/2000/NOTE-SOAP-20000508/#_Toc478383528">SOAP 1.1</a>
+     */
+    public static String validateSoapActionHeader(String soapAction) {
+        if (soapAction == null || soapAction.isEmpty() || "\"\"".equals(soapAction)) {
+            //allow missing, empty and "" SoapAction
+            return soapAction;
+        }
+
+        final int lastIndex = soapAction.length() - 1;
+        if (lastIndex > 1 && soapAction.charAt(0) == '"' && soapAction.charAt(lastIndex) == '"') {
+            try {
+                // try to parse the URI, ignore result
+                new URI(soapAction.substring(1, lastIndex));
+                return soapAction;
+            } catch (URISyntaxException e) {
+                throw new CodedException(X_INVALID_SOAP_ACTION, e, "Malformed SOAPAction header");
+            }
+        }
+        throw new CodedException(X_INVALID_SOAP_ACTION, "Malformed SOAPAction header");
     }
 }
